--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -78,6 +78,10 @@
 			<div class="col s6 input-field">
 				<input type="checkbox" class="value" id="option1" />
 				<label for="option1" class="translate">option1</label>
+			</div> 
+			<div class="col s6 input-field">
+				<input type="checkbox" class="value" id="option1" />
+				<label for="option1" class="translate">option3</label>
 			</div>
 
 			<div class="col s6 input-field">
